--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 *{
     margin: 0%;
     padding: 0%;
-    /* overflow-x: hidden; */
-    background-color: rgb(34, 25, 2)
+    overflow-x: hidden;
+    background-color: rgb(34, 25, 2);
 }
 
 .btn{
@@ -11,15 +11,15 @@
     margin: .5rem;
     padding: .5rem;
     border: none;
-    border: 1px solid rgb(255, 196, 0);
+    border: 1px solid white;
     border-radius: 1rem;
-    color: rgb(255, 196, 0);
+    color: white;
     cursor: pointer;
 }
 
 .btn:hover{
     background-color: white;
-    color: rgb(27, 4, 38); 
+    color: rgb(27, 4, 38);
 }
 
 /* css start for header or navbar */
@@ -31,6 +31,10 @@
     background-color:rgb(34, 25, 2);
     position: sticky;
     border-bottom: 2px solid rgb(54, 54, 54);
+    position: fixed;
+    width: 100%;
+    top: 0; 
+    z-index: 10;
 }
 
 .header .headerLogo{
@@ -76,6 +80,43 @@
     border-radius:100% ;
     display: none;
 }
+.header .fontAwsome{
+    margin: 0 1rem;
+    width: 2rem;
+    display: flex;
+    display: none;
+    cursor: pointer;
+}
+.header .fontAwsome .menu{
+    color:white;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin: 4px;
+}
+.header .fontAwsome .close{
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 4px;
+    color:white;
+}
+.mobile-menu{
+    margin-top: 3.75rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+    background-color:rgb(44, 32, 3);
+    padding: 2rem 0;
+}
+.mobile-menu li{
+    font-size: 2rem;
+    align-items: center;
+    padding: 1rem;
+    background-color:rgb(44, 32, 3);
+}
 
 /* css end for header or navbar */
 /* css for herosection */
@@ -85,6 +126,8 @@
     display: flex;
     height: fit-content;
     justify-content: space-around;
+    margin-top: 3rem;
+    z-index: 5;
 }
 .heroSection .rigth{
     width: 45%;
@@ -375,6 +418,14 @@
 
 
 /* media query or navbar */
+@media only screen and (min-width: 1141px) {
+    .mobile-menu{
+        display: none;
+    }
+    .mobile-menu li{
+        display: none;
+    }
+}
 @media (max-width:1140) and (min-width:870){
     .header .headerLogo{
         border: 1.5px solid white;
@@ -398,6 +449,12 @@
     }
     .header .navList ul li{
         padding: 0 1.25rem;  
+    }
+    .mobile-menu{
+        display: none;
+    }
+    .mobile-menu li{
+        display: none;
     }
     .heroSection .left .content{
         padding: 0 5%;
@@ -475,6 +532,12 @@
     .header .navList{
         margin: 0;
     }
+    .mobile-menu{
+        display: none;
+    }
+    .mobile-menu li{
+        display: none;
+    }
     .header .navList ul{
         font-size: 1.4rem;
     }
@@ -532,6 +595,10 @@
 }
 
 @media (max-width:600){
+    .header{
+        display: flex;
+        justify-content: space-between;
+    }
     .header .headerLogo{
         border: 1px solid white;
         margin: 0.75rem 1.5rem;    
@@ -542,9 +609,16 @@
     .header .Btn{
         display: none;
     }
+    .header .fontAwsome{
+        display: block;
+    }
     .header .navList{
         display: none;
     }
+    div .hide{
+        display: none;
+    }
+
     .heroSection{
         flex-direction: column;
         display: flex;
@@ -610,7 +684,7 @@
     .skills .skillsDiv .SkillContanier{
         width: 100%;
         height: fit-content;
-        margin: 5% 2%;
+        margin: 5% 4%;
         padding: 4% 7%;
     }
     .skills .skillsDiv .SkillContanier .skillHeading{
@@ -621,7 +695,7 @@
     }
     .education .educationDetail .main{
         width: 100%;
-        margin: 1rem 0;
+        margin: 1rem .8rem;
         overflow: hidden;
     }
     .education .educationDetail .main .upperDiv{
@@ -631,9 +705,9 @@
         font-size: 20px;
     }
     .projects .projectContainer .projectItem{
-        width: 80%;
+        width: 100%;
         height:27.7rem;
-        margin: 1rem 0;
+        margin: 1rem .8rem;
     }
     .projects .projectContainer .projectItem img{
         width: 100%;
@@ -652,7 +726,6 @@
         letter-spacing: 0.5px;
     }
     .contact .form .wrepper{
-        margin: 0 0 1rem 0;
         width: 75%;
     }
     .contact .form .wrepper form button{
